Fix scrollbars, fix expression error overflow, clean up style sidebar

--- a/packages/perspective-viewer-datagrid/src/less/scrollbar.less
+++ b/packages/perspective-viewer-datagrid/src/less/scrollbar.less
@@ -12,9 +12,6 @@
 
 // Scrollbar styling
 regular-table {
-    // firefox scrollbar styling
-    scrollbar-color: transparent transparent;
-    scrollbar-width: thin;
     outline: none;
 
     // webkit (chrome, safari, etc) scrollbar styling
