--- a/rust/perspective-viewer/src/less/column-settings-panel.less
+++ b/rust/perspective-viewer/src/less/column-settings-panel.less
@@ -24,6 +24,7 @@
     }
 
     .item_title {
+        flex: 0 0 auto;
         font-size: 9px;
     }
 
