--- a/rust/perspective-viewer/src/less/column-style.less
+++ b/rust/perspective-viewer/src/less/column-style.less
@@ -53,7 +53,7 @@
         }
 
         label {
-            font-size: 8px;
+            font-size: 9px;
             width: 100%;
         }
 
