--- a/rust/perspective-viewer/src/less/dom/checkbox.less
+++ b/rust/perspective-viewer/src/less/dom/checkbox.less
@@ -65,7 +65,7 @@
         padding: 0px;
         cursor: pointer;
         outline: none;
-        margin: 0 5px;
+        margin: 0 5px 0 0;
 
         &:checked:before {
             -webkit-mask-image: var(--column-checkbox-on--mask-image);
