--- a/rust/perspective-viewer/src/less/expression-editor.less
+++ b/rust/perspective-viewer/src/less/expression-editor.less
@@ -27,6 +27,9 @@
             font-size: 12px;
             min-height: 1.5em;
             color: var(--error--color);
+            top: 0;
+            position: absolute;
+            width: calc(100% - 24px);
         }
 
         &.disabled {
@@ -102,6 +105,8 @@
         flex-direction: column;
         padding: 0.5em;
         gap: 0.25em;
+        height: 24px;
+        position: relative;
     }
 
     #save-settings,
